--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
             <head>
                 <meta charset="utf-8">
                 <title>Magic-SSG-Sample Home Page</title>
-                <link rel="stylesheet" href="./stylesheet/default.css">
+                <link rel="stylesheet" href="public/stylesheet/default.css">
                 
                 <meta name="viewport" content="width=device-width, initial-scale=1">
             </head>
